# RD_HW_9

./: .gitignore  README.md  docker-compose.yaml  example.env  pyproject.toml  start.sh
migrations/: env.py
migrations/versions/: 59085740c0d8_init.py
scraper/: .dockerignore  Dockerfile  config.py  db_main.py  docker-compose.yaml  example.env  main.py  pyproject.toml  requirements.txt  tasks.py
scraper/app/: api_interface.py  clone_repo.py  config.py  main.py  pull_repo.py  serializers.py  tasks.py
scraper/tests/: conftest.py  test_api.py
tests/: conftest.py  test_crud.py  test_routers.py
web_app/: .dockerignore  Dockerfile  config.py  db.py  deps.py  docker-compose.yaml  example.env  main.py  pyproject.toml
web_app/app/: __init__.py  config.py  db.py  deps.py  main.py
web_app/app/cves/: __init__.py  crud.py  models.py  router.py  schemas.py
web_app/cves/: __init__.py  crud.py  models.py  router.py  schemas.py
web_app/migrations/: env.py
web_app/migrations/versions/: 6d33b5538d3b_.py
web_app/tests/: conftest.py  test_crud.py  test_routers.py
